syntax = "proto3";

package model;

option go_package = "github.com/yachnytskyi/golang-mongo-grpc/internal/user/delivery/grpc/v1/model";

import "rpc_register_user.proto";
import "rpc_login_user.proto";
import "user.proto";

service UserUseCase {
    rpc Register(UserCreate) returns (GenericResponse) {}
    rpc Login(LoginUser) returns (LoginUserView) {}
    rpc VerifyEmail(VerifyEmailRequest) returns (GenericResponse) {}
    rpc GetMe(GetMeRequest) returns (UserView) {}
}

message VerifyEmailRequest { string verificationCode = 1; }
message GetMeRequest { string Id = 1; }